log
Tue 07 May 2024 08:19:47 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3e7b1cb
Tue 07 May 2024 08:25:47 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
e1dac2b
Tue 07 May 2024 08:28:44 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:13: error: ‘else’ without a previous ‘if’
   73 |             else {
      |             ^~~~
Compilation failed
16c4d3b
Tue 07 May 2024 08:30:03 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/70
87df324
Tue 07 May 2024 08:32:50 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|7
total_score: 5/70
1312a9d
Tue 07 May 2024 08:36:25 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|6
total_score: 15/70
6b99db9
Tue 07 May 2024 08:37:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
bde9d98
